--- a/templates/cart.liquid
+++ b/templates/cart.liquid
@@ -105,12 +105,32 @@
           </div>
 
           <div class="fw--blocks">
+
             <div class="order-notes width--large-6 text-align--center">
+
+              <p class="cart-attribute__field">
+                <p class="text-align--center text-align--large-left" style="font-weight: 700; font-style: italic;">{{ 'cart.donation_label' | t }}</p>
+                <div class="text-align--center text-align--large-left">
+                <input type="radio" name="attributes[Donation]" checked value="Option 1"{% if cart.attributes["Donation"] == "350" %} checked{% endif %}>
+                <span><b>350</b> <br /> 
+                <span style="padding-left: 25px;">Building a global grassroots movement to fight climate change and win a just, fossil free future for all of us</span>
+                </span>
+                <br><br/>
+                <input type="radio" name="attributes[Donation]" value="Option 2"{% if cart.attributes["Donation"] == "Gun Safety" %} checked{% endif %}> 
+                <span><b>Everytown for Gun Safety</b><br /> 
+                <span style="padding-left: 25px;">A movement of Americans working together to end gun violence and build safer communities</span>
+                </span><br>
+                </div>
+              </p>
+
+
               {% if settings.cart--show-note %}
-                <p class="text-align--center text-align--large-left">{{ 'cart.order_notes' | t }}</p>
+                <p class="text-align--center text-align--large-left" style="margin-top: 42px">{{ 'cart.order_notes' | t }}</p>
                 <textarea name="note">{{ note }}</textarea>
                 <div class="spacer spacing--4y show-for-small-medium"></div>
               {% endif %}
+
+              
 
             </div>
 
@@ -120,10 +140,10 @@
               
               <div class="text-align--center text-align--large-right checkout-checkboxes ">
                 
-                <div class="checkbox">
+                {% comment %} <div class="checkbox">
                   
                    <label>There may be shipping delays for certain styles. Please refer to the product page at the time of purchase for the estimated ship time of your order</label>
-                </div> 
+                </div>  {% endcomment %}
                 
                   
    
