--- a/snippets/framework--cart.liquid
+++ b/snippets/framework--cart.liquid
@@ -10,8 +10,25 @@
       <div class="spacer spacing--3y"></div>
       <div class="fw--blocks">
         <div class="width--large-6 text-align--center">
+
+          <p class="cart-attribute__field">
+                <p class="text-align--center text-align--large-left" style="font-weight: 700; font-style: italic;">{{ 'cart.donation_label' | t }}</p>
+                <div class="text-align--center text-align--large-left">
+                <input type="radio" name="attributes[Donation]" checked value="Option 1"{% if cart.attributes["Donation"] == "350" %} checked{% endif %}>
+                <span><b>350</b> <br /> 
+                <span style="padding-left: 25px;">Building a global grassroots movement to fight climate change and win a just, fossil free future for all of us</span>
+                </span>
+                <br><br/>
+                <input type="radio" name="attributes[Donation]" value="Option 2"{% if cart.attributes["Donation"] == "Gun Safety" %} checked{% endif %}> 
+                <span><b>Everytown for Gun Safety</b><br /> 
+                <span style="padding-left: 25px;">A movement of Americans working together to end gun violence and build safer communities</span>
+                </span><br>
+                </div>
+              </p>
+
+
           {% if settings.cart--show-note %}
-            <p class="text-align--center text-align--large-left">{{ 'cart.order_notes' | t }}</p>
+            <p class="text-align--center text-align--large-left" style="margin-top: 42px">{{ 'cart.order_notes' | t }}</p>
             <textarea name="note">{{ note }}</textarea>
             <div class="spacer spacing--4y show--small-medium"></div>
           {% endif %}
@@ -24,15 +41,8 @@
           <div class="spacer spacing--2y"></div>
               
               <div class="text-align--center text-align--large-right checkout-checkboxes ">
-                
-                <div class="checkbox">
-                  
-                   <label>Please be aware that there may be shipping delays for certain styles. Refer to the product page at the time of purchase for the estimated ship time of your order</label>
-                </div> 
-                
-                 
+    
                  <div class="checkbox">
-                  
                    <label>International orders may be subjected to local import duties and taxes. It is the responsibility of the recipient to be aware and pay for any associated fees to their local customs</label>
                 </div> 
               </div>
